--- a/index.html
+++ b/index.html
@@ -1,45 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
-    <script src="js/jquery.js"></script>
-    <script src="js/scripts.js"></script>
-    <title>Cats-vs-Dogs</title>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Cats-VS-Dogs</h1>
-      <p>Click a button.</p>
+<head>
+<link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+<link rel="stylesheet" href="css/styles.css" type="text/css">
+<script src="js/jquery.js"></script>
+<script src="js/scripts.js"></script>
+<div class="container">
+<div class="jumbotron">
+  <div class="well">
 
+  <title>Talk to the web page</title>
+</head>
+<body>
+  <div class="container">
+    <h1>Talk to the web page</h1>
+    <p>Click a button to say something to the web page. See what it says back!</p>
+    <button class="btn btn-success" id="hello">Say "hello"</button>
+    <button class="btn btn-info" id="goodbye">Say "goodbye"</button>
+    <button class="btn btn-danger" id ="stop">say "stop"</button>
+  </div>
+  <div class="row">
+    <div class="col-md-6">
+      <h2>Rakhat said : </h2>
+      <ul class="unstyled" id="user">
 
-      <button class="btn btn-success" id="cat">CAT</button>
-      <button class="btn btn-danger" id="dog">DOG</button>
-
-    <div class="row">
-      <div class="col-md-6">
-        <h2>cat said:</h2>
-        <ul class="unstyled" id="cat-said">
-
-        </ul>
-     </div>
-
-      <div class="col-md-6">
-        <h2>dog said:</h2>
-        <ul class="unstyled" id="dog-said">
-
-        </ul>
-      </div>
+      </ul>
     </div>
+    <div class="col-md-6">
+      <h2>Web page said back :</h2>
+      <ul class="unstyled" id="webpage">
 
-    <div class="row">
-      <button class="btn btn-success" id="look">What does the cat look like?</button>
-      <ul class="unstyled" id="look">
-
-
+      </ul>
 
     </div>
-
-    </div>
-  </body>
+  </div>
+  </div>
+  </div>
+  </div>
+</body>
 </html>
